# uniearn

./: .gitignore  docker-compose.yml
api/: Dockerfile  containers.py  data.py  ethereal_provider.py  fetched_data  gql_client.py  main.py  pools.py  pyproject.toml  utils.py
data/: .gitignore  Dockerfile  config.yml  cron-fetch.sh  crontab  fetch-pools.sh  main.py  pyproject.toml  start_cron.sh
data/data/: containers.py  uniswap.py
data/notebooks/: data.ipynb
deploy/: deploy.sh  deploy_and_purge.sh  inventory.yaml  playbook.yaml  pyproject.toml
