[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Alex Euler <0xalexeuler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
gql = "^3.4.1"
dependency-injector = "^4.41.0"
requests = "^2.31.0"
requests-toolbelt = "^1.0.0"
aiohttp = "^3.8.4"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
