[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Alex Euler <0xalexeuler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gql = "^3.4.1"
ethereal = "^0.1.9"
click = "^8.1.3"
dependency-injector = "^4.41.0"
requests = "^2.30.0"
requests-toolbelt = "^1.0.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.6.3"
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
